--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <version>2.10.1</version>
         </dependency>
 
-        <!-- JUnit para testes (opcional, mas útil para validar código) -->
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -56,7 +56,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass> <!-- Substitua por sua classe principal, ex.: com.coworking.Main -->
+                            <mainClass>Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
